[filtersPills] fix group name overlapping focus style

--- a/packages/scss/src/components/simpleSelect/mods.scss
+++ b/packages/scss/src/components/simpleSelect/mods.scss
@@ -62,6 +62,6 @@
 		border-radius: 0;
 		background-color: transparent;
 		padding: var(--pr-t-spacings-50);
-		margin: var(--pr-t-spacings-50) calc(var(--pr-t-spacings-100) * -1) calc(var(--pr-t-spacings-100) * -1);
+		margin: var(--pr-t-spacings-75) calc(var(--pr-t-spacings-100) * -1) calc(var(--pr-t-spacings-100) * -1);
 	}
 }
